--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,5 +12,5 @@
       "resolveJsonModule": true
     },
     "include": ["src/**/*.ts"],
-    "exclude": ["node_modules","**/*.test.ts"]
+    "exclude": ["node_modules"]
   }
