--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore node_modules in both frontend and backend
 backend/node_modules
-#frontend/node_modules
+frontend/node_modules
 
 # Ignore build files
 backend/dist
@@ -8,6 +8,8 @@ frontend/build
 
 # Ignore environment variables
 backend/.env
+
+frontend/.env
 
 
 # Ignore IDE-specific files
