--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,6 @@
 {
     "routes": [
-      { "src": "/admin.*", "dest": "/index.html" },
-      { "src": "/(.*)", "dest": "/index.html" }
+      { "src": "/admin.*", "dist": "/index.html" },
+      { "src": "/(.*)", "dist": "/index.html" }
     ]
   }
